--- a/app/views/customers/new.html.haml
+++ b/app/views/customers/new.html.haml
@@ -1,6 +1,7 @@
 %h1 Add customer 
 
 =form_for @customer do |f|
+  =render 'shared/error_messages', :object => f.object
   %div.field
   =f.label :first_name
   %br
