--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,8 @@
     %title Wiggins Electric
     = stylesheet_link_tag :all 
     = javascript_include_tag :defaults
+    %script{ :type => "text/javascript", :src => 'http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'}
+    %script{ :type => "text/javascript", :src => 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/jquery-ui.min.js'}
     = csrf_meta_tag
  
  
@@ -11,10 +13,10 @@
     %nav
       %ul
         %li
-          = link_to 'Customers', customers_path
-        %li
-          = link_to 'Units', units_path
+          = link_to 'Home', customers_path
     %br
 
     = render "layouts/notice_div.html.erb"
     = yield
+
+    = debug(params) if Rails.env.development?
