--- a/app/views/customers/edit.html.haml
+++ b/app/views/customers/edit.html.haml
@@ -1,6 +1,6 @@
 %h1 Edit Customer
 
-=form_for @customer, :url => { :action => 'update' } do |f|
+=form_for @customer do |f|
   =f.label :first_name
   %br
   =f.text_field :first_name
