--- a/app/views/customers/new.html.haml
+++ b/app/views/customers/new.html.haml
@@ -3,13 +3,16 @@
 =form_for @customer do |f|
   =render 'shared/error_messages', :object => f.object
   %div.field
-  =f.label :first_name
-  %br
-  =f.text_field :first_name
-  %br
-  =f.label :last_name
-  %br
-  =f.text_field :last_name
+    %fieldset
+      %legend='Customer'
+      %div
+      =f.label :first_name
+      %br
+      =f.text_field :first_name
+      %br
+      =f.label :last_name
+      %br
+      =f.text_field :last_name
   %br
   =f.label :address
   %br
