--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,19 +4,26 @@
     %title Wiggins Electric
     = stylesheet_link_tag :all 
     = javascript_include_tag :defaults
-    %script{ :type => "text/javascript", :src => 'http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'}
-    %script{ :type => "text/javascript", :src => 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/jquery-ui.min.js'}
+    = #%script{ :type => "text/javascript", :src => 'http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'}
+    = #%script{ :type => "text/javascript", :src => 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/jquery-ui.min.js'}
     = csrf_meta_tag
  
- 
   %body
-    %nav
-      %ul
-        %li
-          = link_to 'Home', customers_path
-    %br
+    %div#container
+      %div#top
+        %h1 Wiggins Electric
+        = link_to 'Home', customers_path
+        %div#searchbar
+          //= select( "searchterm", "searchby", { "Customers" => "Customers", "Units" => "Units" } )
+          //= search_field(:customer, :first_name)
+          //= submit_tag("Search")
+          = form_tag({:controller => "search", :action => "search"}, :method => "get")
+          = select_tag "searchby", options_for_select([ "Customers", "Units" ], "Customers")
+          = text_field_tag :search, params[:search]
+          = submit_tag "Search"
 
-    = render "layouts/notice_div.html.erb"
-    = yield
+      = render "layouts/notice_div.html.erb"
+      = yield
 
+      %div#footer
     = debug(params) if Rails.env.development?
