--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
         %h1 Wiggins Electric
         %br
         = link_to 'Customers', customers_path
+        = " - "
         = link_to 'Units', units_path
         %div#searchbar
           //= select( "searchterm", "searchby", { "Customers" => "Customers", "Units" => "Units" } )
@@ -25,7 +26,8 @@
             = submit_tag "Search", :name => nil
 
       = render "layouts/notice_div.html.erb"
-      = yield
+      %div#content
+        = yield
 
       %div#footer
     = debug(params) if Rails.env.development?
