--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,6 +3,16 @@ body {
 background-color: #528B8B
 }
 
+a { 
+text-decoration: none;
+font-weight: bold;
+}
+
+a:link { color:#344152; } 
+a:visited { color: #344152; }
+a:hover { color: #344152; text-decoration: underline; }
+a:active { color: #344152; }
+
 #container
 {
 width: 90%;
@@ -32,6 +42,10 @@ margin: 0;
 padding: 0;
 }
 
+#content {
+padding: 1em;
+}
+
 #customer
 {
 float: left;
@@ -42,7 +56,8 @@ padding: 1em;
 
 #notes
 {
-  float: left;
+  float: right;
+  width: 50%;
   margin: 0;
   padding: 1em;
 }
@@ -53,6 +68,13 @@ padding: 1em;
 clear: left;
 float: left;
 width: 30%;
+margin: 0;
+padding: 1em;
+}
+
+#unit_notes {
+float: right;
+width: 50%;
 padding: 1em;
 }
 
@@ -74,3 +96,30 @@ border-top: 1px solid gray;
 
 #customer p { margin: 0 0 1em 0; }
 #units h2 { margin: 0 0 .5em 0; }
+
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+ul li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 0.2em 0;
+}
+
+nav ul li a {
+  padding: 0 5px;
+  font-weight: bold;
+}
+
+nav ul li a:visited {
+  color: #09c;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
+}
+
+td {
+}
