--- a/app/views/shared/_customer_info.html.haml
+++ b/app/views/shared/_customer_info.html.haml
@@ -2,27 +2,23 @@
 /// Customer Information ///
 ///////////////////////////
 %div#customer
-  %table
+  %table.customer
     %tr
-      %td
-        %h1= @customer.full_name
+      %th
+        = @customer.full_name
 
-    %tr{:align => 'center', :bgcolor => 'EEEEEE'}
-      %td
-        %b Address
-    %tr{:align => 'center'}
+    %tr
       %td
         = @customer.address
         %br
         = @customer.city + ", " + @customer.state + " " + @customer.zip
 
-    %tr{:align => 'center', :bgcolor => 'EEEEEE'}
-      %td
-        %b Contact #
-    %tr{:align => 'center'}
+    %tr
       %td
         = @customer.contact
-    %tr{:align => 'right'}
-      %td
+
+    %tr
+      %td{ :style => 'text-align: right' }
         = link_to "Edit", edit_customer_path
-        //=button_to "Delete", @customer, :method => :delete, :confirm => "You sure?", :title => "Delete #{@customer.first_name} #{@customer.last_name}"
+        |
+        = link_to "Delete", @customer, :method => :delete, :confirm => "Are you sure you want to delete this customer?", :title => "Delete #{@customer.first_name} #{@customer.last_name}"
