--- a/app/views/customers/new.html.haml
+++ b/app/views/customers/new.html.haml
@@ -1,37 +1,36 @@
-%h1 Add customer 
-
-=form_for @customer do |f|
-  =render 'shared/error_messages', :object => f.object
-  %div.field
+#customer_form
+  =form_for @customer do |f|
     %fieldset
-      %legend='Customer'
-      %div
-      =f.label :first_name
-      %br
-      =f.text_field :first_name
-      %br
-      =f.label :last_name
-      %br
-      =f.text_field :last_name
-  %br
-  =f.label :address
-  %br
-  =f.text_field :address
-  %br
-  =f.label :city
-  %br
-  =f.text_field :city
-  %br
-  =f.label :state
-  %br
-  =f.text_field :state
-  %br
-  =f.label :zip
-  %br
-  =f.text_field :zip
-  %br
-  =f.label :contact
-  %br
-  =f.text_field :contact
-  %br
-  =f.submit "Add"
+      %legend Add Customer
+      %ol
+        %li
+          =render 'shared/error_messages', :object => f.object
+      %ol
+        %li
+          =f.label :first_name
+          =f.text_field :first_name
+      %ol
+        %li
+          =f.label :last_name
+          =f.text_field :last_name
+      %ol
+        %li
+          =f.label :address
+          =f.text_field :address
+      %ol
+        %li
+          =f.label :city
+          =f.text_field :city
+        %li
+          =f.label :state
+          =f.text_field :state
+        %li
+          =f.label :zip
+          =f.text_field :zip
+      %ol
+        %li
+          =f.label :contact
+          =f.text_field :contact
+      %ol
+        %li
+          =f.submit "Add"
