Commit before sending to Heroku to test in Production mode. Also swapped prototype for jquery.

--- a/app/views/customers/show.html.haml
+++ b/app/views/customers/show.html.haml
@@ -21,7 +21,7 @@
           %td= unit.serial_number
     %tr
       %td{ :colspan => 2, :style => 'text-align: right' }
-        = link_to "Add New Unit", new_unit_path
+        = link_to "Add New Unit", new_customer_unit_path(@customer)
 
 
 ///////////////////////
