--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %title Wiggins Electric
     = stylesheet_link_tag :all 
+    = stylesheet_link_tag 'smoothness/jquery-ui-1.8.16.custom'
     = javascript_include_tag :all
     = csrf_meta_tag
 
