--- a/app/views/units/new.html.haml
+++ b/app/views/units/new.html.haml
@@ -23,7 +23,7 @@
             });
         %tr
           %td
-            Date:
+            Date
           %td
             %input{ :id => "datepicker", :type => "text"}
         %tr
