--- a/app/views/customers/new.html.haml
+++ b/app/views/customers/new.html.haml
@@ -8,29 +8,29 @@
       %ol
         %li
           =f.label :first_name
-          =f.text_field :first_name
+          =f.text_field :first_name, :size => 20
       %ol
         %li
           =f.label :last_name
-          =f.text_field :last_name
+          =f.text_field :last_name, :size => 20
       %ol
         %li
           =f.label :address
-          =f.text_field :address
+          =f.text_field :address, :size => 20
       %ol
         %li
           =f.label :city
-          =f.text_field :city
+          =f.text_field :city, :size => 20
         %li
-          =f.label :state
-          =f.text_field :state
+          =f.label :state 
+          =f.text_field :state, :size => 2
         %li
           =f.label :zip
-          =f.text_field :zip
+          =f.text_field :zip, :size => 10
       %ol
         %li
           =f.label :contact
-          =f.text_field :contact
+          =f.text_field :contact, :size => 20
       %ol
         %li
           =f.submit "Add"
