--- a/app/views/customers/show.html.haml
+++ b/app/views/customers/show.html.haml
@@ -7,47 +7,47 @@
   %h2 Installed Units
   %table.report
     %tr
+      %th Install Date
       %th Model
       %th Serial Number
+      %th 
 
     - if (@customer.units.empty?) # Display message if Customer has no units
       %tr
-        %td{ :colspan => '2' } There are no installed units for this customer.
+        %td{ :colspan => '3' } There are no installed units for this customer.
     - else
       - # Show each Unit tied to selected customer. 
       - @customer.units.each do |unit|
         %tr
+          %td= unit.install_date
           %td= unit.model
           %td= unit.serial_number
+          %td= link_to "Edit", edit_customer_unit_path(@customer, unit)
     %tr
-      %td{ :colspan => 2, :style => 'text-align: right' }
+      %td{ :colspan => 4, :style => 'text-align: right' }
         = link_to "Add New Unit", new_customer_unit_path(@customer)
-
-
-///////////////////////
-/// Customer Notes ///
-/////////////////////
-%div#notes
-  %h2 Customer Notes
-  %table.report
-    %tr
-      %th Note
-      %th Date Added
-      %th 
-    %tr
-      %td Test Note - Static
-      %td Test Date - Static
-      %td Edit | Delete
-    %tr
-      %td{ :colspan => '3', :style => 'text-align: right' } New Note
 
 
 ///////////////////////
 /// Service Notes   ///
 ///////////////////////
 %div#unit_notes
-  %h1 Service Notes
-  Service notes will go here. 
+  %h2 Service Details
+  %table.report
+    %tr
+      %th Date
+      %th Details
+      %th 
+    - if (@customer.service_notes.empty?)
+      %tr
+        %td{ :colspan => 2 } This unit has not been serviced.
+    - else
+      - @customer.service_notes.each do |service|
+        %tr
+          %td= service.date
+          %td= service.note
+          %td= link_to "Edit", edit_customer_service_note_path(@customer, service)
+    %tr
+      %td{ :colspan => 2, :style => 'text-align: right' }
+        = link_to "Add Service Note", new_customer_service_note_path(@customer)
 
-
-          
