--- a/public/stylesheets/notices.css
+++ b/public/stylesheets/notices.css
@@ -1,7 +1,7 @@
 #notice { background-color: #A4E7A0; border: 1px solid #26722D; }
 #error { background-color: #F0A8A8; border: 1px solid #900; }
-#notice, #error { width: 90%; margin: 0 auto 10px auto; padding: 5px; }
-#notice p, #error p { margin-left: 20px; padding: 0; font-size: .75em; color: #000; }
+#notice, #error { width: 100%; margin: 0; padding: 0px; }
+#notice p, #error p { margin-left: 20px; padding: 5px; font-weight: bold; font-size: .75em; color: #000; }
 #notice a, #error a { text-decoration: none; padding: 0 3px; }
 #notice a { border: 1px solid #26722D; color: #26722D; }
 #error a { border: 1px solid #900; color: #900; }
