Changed menu link. Added application.js back

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
         %br
 
         // Menu
-        = link_to 'Customers', customers_path
+        = link_to 'Customer List', customers_path
 
         // Search bar on application header.
         %div#searchbar
